@@ -1477,6 +1477,11 @@ Mon Jun  2 17:36:03 CEST 2003
 Tue Jun 10 19:43:49 CEST 2003
 
 	- Fixed several small bugs.
+	
+Wed Jun 11 08:30:41 CEST 2003
+
+	- Make sure a variable is no longer referenced when it is removed.
+	- Fixed counting bug in parsing "->" operator.
 	- Set ecpg version to 2.12.0.
 	- Set ecpg library to 3.4.2.
 	- Set pgtypes library to 1.0.0
